--- a/RemoteController/RemoteController.Service/Web/movie.html
+++ b/RemoteController/RemoteController.Service/Web/movie.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>WebSocket Echo Test</title>
-    <meta name="viewport" content= "width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, user-scalable=no">
     <script type="text/javascript" src="/Scripts/WebSocket.js"></script>
     <script type="text/javascript" src="/Scripts/index.js"></script>
 
@@ -29,10 +29,10 @@
     <div class="container">
         <button onclick="message('key.volume.+')" type="submit">Vol +</button>
         <button onclick="message('key.volume.-')" type="submit">Vol -</button>
-        <button onclick="message('key.left')" type="submit">&lt;-</button>
-        <button onclick="message('key.right')" type="submit">-&gt;</button>
-        <button onclick="message('key.space')" type="submit">Space</button>
-        <button onclick="message('key.f')" type="submit">F</button>
+        <button onclick="message('key', 'left')" type="submit">&lt;-</button>
+        <button onclick="message('key', 'right')" type="submit">-&gt;</button>
+        <button onclick="message('key', 'space')" type="submit">Space</button>
+        <button onclick="message('key', 'f')" type="submit">F</button>
     </div>
 
     <div id="output"></div>
