--- a/RemoteController/RemoteController.Service/Web/movie.html
+++ b/RemoteController/RemoteController.Service/Web/movie.html
@@ -26,6 +26,12 @@
     </style>
 </head>
 <body>
+
+    <div class="links">
+        <a href="/index.html">Home</a>
+        <a href="/movie.html">Movie</a>
+    </div>
+
     <div class="container">
         <button onclick="message('key.volume.+')" type="submit">Vol +</button>
         <button onclick="message('key.volume.-')" type="submit">Vol -</button>
