--- a/RemoteController/RemoteController.Service/Web/index.html
+++ b/RemoteController/RemoteController.Service/Web/index.html
@@ -13,21 +13,26 @@
     </style>
 </head>
 <body>
-<h2>WebSocket Echo Test</h2>
-
-<form action="javascript:void(0);">
-    <div>
-        <span class="span">Action name:</span>
-        <input id="cmdName" />
-    </div>
-    <div>
-        <span class="span">Parameter:  </span>
-        <input id="cmdParam" />
+    <div class="links">
+        <a href="/index.html">Home</a>
+        <a href="/movie.html">Movie</a>
     </div>
 
-    <button id="btnPing" type="submit">Execute</button>
-</form>
+    <h2>WebSocket Echo Test</h2>
 
-<div id="output"></div>
+    <form action="javascript:void(0);">
+        <div>
+            <span class="span">Action name:</span>
+            <input id="cmdName" />
+        </div>
+        <div>
+            <span class="span">Parameter: </span>
+            <input id="cmdParam" />
+        </div>
+
+        <button id="btnPing" type="submit">Execute</button>
+    </form>
+
+    <div id="output"></div>
 </body>
 </html>
