Improving logic for file system.

--- a/RemoteController/RemoteController.Service/Web/files.html
+++ b/RemoteController/RemoteController.Service/Web/files.html
@@ -17,12 +17,14 @@
     <div class="border"></div>
 
     <button id="btnTest">Test</button>
+    <div id="paths"></div>
+    <div class="border"></div>
 
     <div id="folders"></div>
     <div class="border"></div>
     <div id="files"></div>
 
-<div class="border"></div>
+    <div class="border"></div>
     <div id="output"></div>
 </body>
 </html>
