Added volume slider

--- a/RemoteController/RemoteController.Service/Web/movie.html
+++ b/RemoteController/RemoteController.Service/Web/movie.html
@@ -18,6 +18,10 @@
     <div class="border"></div>
 
     <div class="btn-container">
+        <div>
+            Volume: <span id="lblVolume" />
+        </div>
+        <input id="inpVolume" type="range" min="0" max="100"/>
         <button onclick="message('key.volume.+')" type="submit">Vol +</button>
         <button onclick="message('key.volume.-')" type="submit">Vol -</button>
         <button onclick="message('key', 'left')" type="submit">&lt;-</button>
