--- a/RemoteController/RemoteController.Service/Web/movie.html
+++ b/RemoteController/RemoteController.Service/Web/movie.html
@@ -21,7 +21,7 @@
         <div>
             Volume: <span id="lblVolume" />
         </div>
-        <input id="inpVolume" type="range" min="0" max="100"/>
+        <input id="inpVolume" type="range" min="0" max="100" step="1"/>
         <button onclick="message('key.volume.+')" type="submit">Vol +</button>
         <button onclick="message('key.volume.-')" type="submit">Vol -</button>
         <button onclick="message('key', 'left')" type="submit">&lt;-</button>
