--- a/RemoteController/RemoteController.Service/Web/Test/index.html
+++ b/RemoteController/RemoteController.Service/Web/Test/index.html
@@ -3,9 +3,9 @@
 <head>
     <title>WebSocket Echo Test</title>
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <script type="text/javascript" src="/Scripts/WebSocket.js"></script>
-    <script type="text/javascript" src="/Scripts/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="/Styles/styles.css">
+    <script type="text/javascript" src="/Test/Scripts/WebSocket.js"></script>
+    <script type="text/javascript" src="/Test/Scripts/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="/Test/Styles/styles.css">
 
     <style>
         .span {
@@ -16,9 +16,9 @@
 </head>
 <body>
     <div class="links">
-        <a href="/index.html">Home</a>
-        <a href="/movie.html">Movie</a>
-        <a href="/files.html">Files</a>
+        <a href="/Test/index.html">Home</a>
+        <a href="/Test/movie.html">Movie</a>
+        <a href="/Test/files.html">Files</a>
     </div>
     <div class="border"></div>
 
